# OpenXRayMC

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  UserPresets.json
data/bowtiefilters/: bowtiefilters.json
src/app/: CMakeLists.txt  basesettingswidget.cpp  basesettingswidget.hpp  beamsettingswidget.cpp  beamsettingswidget.hpp  ctdicomimportwidget.cpp  ctdicomimportwidget.hpp  icrpphantomimportwidget.cpp  icrpphantomimportwidget.hpp  mainwindow.cpp  mainwindow.hpp  opendxmc.cpp  otherphantomimportwidget.cpp  otherphantomimportwidget.hpp  statusbar.cpp  statusbar.hpp
src/libopendxmc/: CMakeLists.txt  beamactorcontainer.cpp  beamactorcontainer.hpp  beamsettingsmodel.cpp  beamsettingsmodel.hpp  bowtiefilterreader.hpp  ctimageimportpipeline.cpp  ctimageimportpipeline.hpp  ctsegmentationpipeline.cpp  ctsegmentationpipeline.hpp  datacontainer.cpp  datacontainer.hpp  hdf5wrapper.cpp  otherphantomimportpipeline.cpp  otherphantomimportpipeline.hpp  simulationpipeline.cpp  simulationpipeline.hpp  volumerendersettings.cpp  volumerendersettingswidget.cpp  volumerenderwidget.cpp  xraymc_specialization.cpp
src/libopenxraymc/: CMakeLists.txt  basepipeline.cpp  basepipeline.hpp  beamactorcontainer.cpp  beamactorcontainer.hpp  beamsettingsdelegate.cpp  beamsettingsdelegate.hpp  beamsettingsmodel.cpp  beamsettingsmodel.hpp  beamsettingsview.cpp  beamsettingsview.hpp  bowtiefilterreader.cpp  bowtiefilterreader.hpp  colormaps.cpp  colormaps.hpp  ctaecplot.cpp  ctaecplot.hpp  ctimageimportpipeline.cpp  ctimageimportpipeline.hpp  ctorgansegmentatorpipeline.cpp  ctorgansegmentatorpipeline.hpp  ctsegmentationpipeline.cpp  ctsegmentationpipeline.hpp  custominteractorstyleimage.cpp  custominteractorstyleimage.hpp  datacontainer.cpp  datacontainer.hpp  dosetablepipeline.cpp  dosetablepipeline.hpp  dosetablewidget.cpp  dosetablewidget.hpp  h5io.cpp  h5io.hpp  hdf5wrapper.cpp  hdf5wrapper.hpp  icrpphantomimportpipeline.cpp  icrpphantomimportpipeline.hpp  niftiwrapper.cpp  niftiwrapper.hpp  otherphantomimportpipeline.cpp  (+19 more)
tests/: CMakeLists.txt  h5wrapper_test.cpp  testqtgraph.cpp
